# DistributedCrack

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Cargo.toml  clang-format  dockerfile  download-dictionary.sh  launch.toml  sbatch.sbatch  spack.yaml  suite.fish  test.csv
.cargo/: config.toml
GPU/: .clangd  CMakeLists.txt
GPU/include/: macro.hpp  md5Cuda.cuh  md5_gpu.hpp
GPU/kernelinclude/: DataTypes.cuh  md5Cuda.cuh
GPU/src/: md5Cuda.cu  md5_gpu.cpp
GPU/test/: test_cuda.cu
cmake/: Coverage.cmake  FlagManager.cmake  TestProjectGenerator.cmake
core/: CMakeLists.txt  Cargo.toml  build.rs
core/include/: compute.hpp  log.hpp  options.hpp  result.hpp  statefile.hpp  thread.hpp  timer.hpp  utils.hpp
core/include/mpi/: balancer.hpp  communicator.hpp  generator.hpp  mpiprocess.hpp  mpipromise.hpp  worker.hpp
core/src/: communicator.cpp  compute.cpp  dictionary_reader.rs  generator.cpp  gpu.rs  main.cpp  main.rs  mpiprocess.cpp  mpipromise.cpp  options.cpp  ssroutine.cpp  state.rs  statefile.cpp  thread.cpp  timer.cpp  utils.cpp  worker.cpp  workers.cpp
core/src/mpi/: workers.rs
core/test/: CMakeLists.txt  launch.toml  test_main.cpp  test_promises.cpp  test_routines.cpp
cracker/: CMakeLists.txt  Cargo.toml  build.rs
cracker/src/: compute_context.rs  dictionary_reader.rs  gpu.rs  lib.rs  mpi.rs  options.rs  result_collector.rs  sequence_generator.rs  single_node.rs  state.rs  timers.rs
cracker/src/mpi/: communicator.rs  ffi.rs  generators.rs  mod.rs  promise.rs  routines.rs  scope.rs  workers.rs
distributed_cracker/: .clangd  CMakeLists.txt
distributed_cracker/deprecated/: options_bag.hpp
distributed_cracker/deprecated/Actors/: mpiconfig.hpp  root.cpp  root.hpp  worker.cpp  worker.hpp
distributed_cracker/deprecated/Async/: async.cpp  async.hpp  executor.cpp
distributed_cracker/deprecated/MultiThread/: autoresetevent.cpp  functions.hpp
distributed_cracker/src/: chunk_loader.cpp  chunk_loader.hpp  clock_register.cpp  clock_register.hpp  log_engine.cpp  log_engine.hpp  main.c  main.cpp  md5.hpp  mpi_routine.cpp  options_bag.hpp  string_generator.cpp  string_generator.hpp  traits.hpp
distributed_cracker/src/Actors/: mpiconfig.hpp  root.cpp  worker.cpp  worker.hpp
distributed_cracker/src/App/: app.hpp  compute_node.cpp  compute_node.hpp  distributor_node.hpp
distributed_cracker/src/Async/: executor.hpp  utils.cpp  utils.hpp
distributed_cracker/src/MultiThread/: autoresetevent.hpp  functions.cpp  functions.hpp
distributed_cracker/src/Resources/: cpuresource.cpp  cpuresource.hpp  cudagpu.cpp  cudagpu.hpp  resource_scheduler.cpp  resource_scheduler.hpp
distributed_cracker/test/: CMakeLists.txt  TestEnvironment.hpp  testEvents.cpp  testGenerator.cpp  testMain.cpp  testMt.cpp  testPromise.cpp
doc/: analysis.ipynb  diary.md
doc/data/: broadwell.csv
doc/proposal/: proposta.tex
doc/report/: descrizione  refs.bib  report.tex
gpu_experiments/: .clangd  CMakeLists.txt
gpu_experiments/src/: main.cu
include/: CompileMacro.hpp  Compute.hpp  ComputeNode.hpp  Concepts.hpp  DataContainer.hpp  EventHandler.hpp  Functions.hpp  LogEngine.hpp  MPIMessageType.hpp  OptionsBag.hpp  RingSchema.hpp  Routines.hpp  Schema.hpp  Statistics.hpp  StatusSaver.hpp  StringGenerator.hpp  ThreadSchema.hpp  TimeMachine.hpp  md5.hpp
include/Async/: Async.hpp  AsyncLoop.hpp  Executor.hpp  Promise.hpp  Utils.hpp
include/MultiThread/: AutoResetEvent.hpp  IThreadSchema.hpp  MultiThreadStringGenerator.hpp  ThreadNode.hpp  ThreadSchema.hpp
include/Nodes/: AddressableWorker.hpp  Node.hpp  SchedulerMaster.hpp  SimpleMaster.hpp  SimpleWorker.hpp  ThreadNode.hpp
include/Orchestrators/: Orchestrator.hpp
include/Statistics/: CsvManager.hpp  Event.hpp  EventProcessor.hpp  Measure.hpp  TimeMachine.hpp
include/TaskProvider/: HashTask.hpp  LocalTaskProvider.hpp  MPITaskGenerator.hpp  MPITaskProvider.hpp  TaskGenerator.hpp  TaskProvider.hpp  TaskRunner.hpp  Tasks.hpp
kernels/: md5_support.cu  sha_512.cl  sha_512.cu
libs/GPU/: .clangd  CMakeLists.txt
libs/GPU/include/: md5_gpu.hpp
libs/GPU/kernelinclude/: CudaStringGenerator.cuh  md5Cuda.cuh  support.cuh
libs/GPU/src/: CudaStringGenerator.cu  md5Cuda.cu  md5_gpu.cpp
libs/GPU/test/: supportkernels.cu  test_cuda.cpp  test_main.cpp
libs/NESLib/: CMakeLists.txt
libs/gpu_md5/: .clangd  CMakeLists.txt  trial_main.cu
libs/gpu_md5/include/: cuda_string_generator.hpp  md5_gpu.h  md5_gpu.hpp
libs/gpu_md5/src/: cuda_array.cuh  cuda_manager.cpp  cuda_manager.hpp  cuda_memory_support.cu  cuda_memory_support.cuh  md5Cuda.cuh  md5_cuda.cu  md5_cuda.cuh  md5_gpu.cpp  md5bruter.c  md5bruter.cpp  md5transform.c  md5transform.cpp  mmp_string_generator.cu  mmp_string_generator.cuh
libs/gpu_md5/src/cuda/: _cdecl  cuda_memory_support.cu  gpu_string_generator.cu  gpu_string_generator.cuh  md5.cu  md5.cuh  md5bruter.cu  md5bruter.cuh  md5gpu.cu  md5gpu.cuh  md5transform.cu  md5transform.cuh  mmp_string_generator.cu
libs/gpu_md5/test/: CMakeLists.txt  istrumented_test.cu  test_main.cpp  test_memory.cu
libs/md5/: CMakeLists.txt
libs/md5/include/: md5.h  md5.hpp  mt_string_generator.hpp  string_generator.h  string_generator.hpp
libs/md5/src/: md5.c  md5.cpp  mt_string_generator.cpp  string_generator.c  string_generator.cpp
libs/md5/test/: CMakeLists.txt  test_main.cpp
rust_core/: CMakeLists.txt  Cargo.toml
rust_core/src/: options.rs
src/: ComputeNode.cpp  DataContainer.cpp  LogEngine.cpp  RingSchema.cpp  Routines.cpp  Schema.cpp  Statistics.cpp  StatusSaver.cpp  StringGenerator.cpp  ThreadSchema.cpp  TimeMachine.cpp  main.cpp  md5.cpp
src/Async/: Async.cpp  Executor.cpp  Promise.cpp  Utils.cpp
src/MultiThread/: AutoResetEvent.cpp  MultiThreadStringGenerator.cpp  ThreadNode.cpp  ThreadSchema.cpp
src/Nodes/: AddressableWorker.cpp  Node.cpp  SchedulerMaster.cpp  SimpleMaster.cpp  SimpleWorker.cpp
test/: TestEnvironment.hpp  testConcepts.cpp  testEvents.cpp  testGenerator.cpp  testMain.cpp  testMt.cpp  testNode.cpp  testPromise.cpp  testSave.cpp  testVersus.cpp
(+14 files in other folders)
