[package]
name = "cracker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
mpi ={version = "*"}
clap={version = "*", features = ["std","derive","env"]}
lazy_static = { version = "*" }
[build-dependencies]
cc = { version = "*" }
cmake = { version = "*" }
libloading = {version = "*"}

[profile.dev]
opt-level = 0
debug = true


[profile.release]
opt-level = 3
debug = false