find_package(GTest REQUIRED CONFIG)
set(UT_TARGET_NAME mpc_ut)
file(GLOB_RECURSE TEST_SOURCES  *.cpp )
get_target_property(TGT_INCLUDE_DIRS ${TARGET_NAME} INCLUDE_DIRECTORIES)
get_target_property(TGT_LIBRARIES ${TARGET_NAME} LINK_LIBRARIES)
list(FILTER SRC_LIST EXCLUDE REGEX ".*main.*")
add_executable(${UT_TARGET_NAME} ${TEST_SOURCES} ${SRC_LIST})
target_include_directories(${UT_TARGET_NAME} PUBLIC ${TGT_INCLUDE_DIRS})
target_link_libraries(${UT_TARGET_NAME} PUBLIC ${TGT_LIBRARIES} PRIVATE GTest::gtest GTest::gtest_main  )