project(Md5Gpu LANGUAGES CUDA CXX)
set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(TARGET_NAME md5_gpu)
file(GLOB_RECURSE SRC_FILES src/*.cpp src/*.cu)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CUDA_ARCHITECTURES 75)
add_library(${TARGET_NAME} SHARED ${SRC_FILES})
add_library(md5::gpu ALIAS ${TARGET_NAME})
target_include_directories(
    ${TARGET_NAME} PUBLIC
    ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
    ${CMAKE_CURRENT_SOURCE_DIR}/src 
    ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(${TARGET_NAME} PRIVATE cuda)





if(ENABLE_UNIT_TEST)
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
endif()
